test_regress/t/t_randsequence_bad.out
%Error-UNSUPPORTED: t/t_randsequence_bad.v:12:7: Unsupported: randsequence
   12 |       randsequence(no_such_production)   
      |       ^~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_randsequence_bad.v:16:7: Unsupported: randsequence
   16 |       randsequence(main)
      |       ^~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_randsequence_bad.v:21:7: Unsupported: randsequence
   21 |       randsequence()
      |       ^~~~~~~~~~~~
%Error: Exiting due to
